deploy/gem/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gem-ingress-web
  namespace: gem-local
spec:
  ingressClassName: nginx
  rules:
    - host: gem.local
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gem-ingress-api
  namespace: gem-local
spec:
  ingressClassName: nginx
  rules:
    - host: gem.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
